--- a/geth/Dockerfile.binary
+++ b/geth/Dockerfile.binary
@@ -1,7 +1,6 @@
 ARG DOCKER_TAG
 
-FROM ethereum/client-go:${DOCKER_TAG}
-
+FROM registry.gitlab.com/pulsechaincom/go-pulse:${DOCKER_TAG}
 # Unused, this is here to avoid build time complaints
 ARG BUILD_TARGET
 
