--- a/geth/Dockerfile.source
+++ b/geth/Dockerfile.source
@@ -9,7 +9,7 @@ ARG BUILD_TARGET
 RUN apk update && apk add --no-cache make gcc musl-dev linux-headers git bash
 
 WORKDIR /src
-RUN bash -c "git clone https://github.com/ethereum/go-ethereum.git && cd go-ethereum && git config advice.detachedHead false && git fetch --all --tags && \
+RUN bash -c "git clone https://gitlab.com/pulsechaincom/go-pulse.git && cd go-pulse && git config advice.detachedHead false && git fetch --all --tags && \
 if [[ ${BUILD_TARGET} =~ pr-.+ ]]; then git fetch origin pull/$(echo ${BUILD_TARGET} | cut -d '-' -f 2)/head:geth-pr; git checkout geth-pr; else git checkout ${BUILD_TARGET}; fi && \
 make geth"
 
