updated to use Pulse-prsm image

--- a/prysm/Dockerfile.binary
+++ b/prysm/Dockerfile.binary
@@ -1,6 +1,7 @@
 ARG DOCKER_TAG
 ARG DOCKER_VC_TAG
-FROM prysmaticlabs/prysm-beacon-chain:${DOCKER_TAG} as ccsource
+#FROM prysmaticlabs/prysm-beacon-chain:${DOCKER_TAG} as ccsource
+FROM registry.gitlab.com/pulsechaincom/prysm-pulse/beacon-chain:${DOCKER_TAG} 
 
 FROM debian:bullseye-slim as consensus
 
@@ -45,7 +46,7 @@ USER ${USER}
 
 ENTRYPOINT ["beacon-chain"]
 
-FROM prysmaticlabs/prysm-validator:${DOCKER_VC_TAG} as vcsource
+FROM registry.gitlab.com/pulsechaincom/prysm-pulse/beacon-chain:${DOCKER_VC_TAG} as vcsource
 
 FROM consensus as validator
 
