Add pulsechainV3 and change docker tags

--- a/default.env
+++ b/default.env
@@ -164,8 +164,8 @@ LH_DOCKERFILE=Dockerfile.binary
 # Prysm
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 PRYSM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-PRYSM_DOCKER_TAG=stable
-PRYSM_DOCKER_VC_TAG=stable
+PRYSM_DOCKER_TAG=latest
+PRYSM_DOCKER_VC_TAG=latest
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
@@ -199,7 +199,7 @@ NM_DOCKERFILE=Dockerfile.binary
 # Go-Ethereum aka Geth
 # SRC build target can be a tag, a branch, or a pr as "pr-ID"
 GETH_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
-GETH_DOCKER_TAG=stable
+GETH_DOCKER_TAG=latest
 GETH_DOCKERFILE=Dockerfile.binary
 
 # Nimbus EL
