--- a/default.env
+++ b/default.env
@@ -169,6 +169,8 @@ LH_DOCKERFILE=Dockerfile.binary
 PRYSM_SRC_BUILD_TARGET='$(git describe --tags $(git rev-list --tags --max-count=1))'
 PRYSM_DOCKER_TAG=latest
 PRYSM_DOCKER_VC_TAG=latest
+PRYSM_DOCKER_CTL_TAG=latest
+PRYSM_DOCKER_CTL_REPO=registry.gitlab.com/pulsechaincom/prysm-pulse/prysmctl
 PRYSM_DOCKERFILE=Dockerfile.binary
 
 # Lodestar
