--- a/prysm.yml
+++ b/prysm.yml
@@ -148,19 +148,14 @@ services:
   validator-exit:
     profiles: ["tools"]
     restart: "no"
-    user: prysmvalidator
-    image: prysm-validator:local
+    image: ${PRYSM_DOCKER_CTL_REPO}:${PRYSM_DOCKER_CTL_TAG}
     volumes:
       - prysmvalidator-data:/var/lib/prysm
       - /etc/localtime:/etc/localtime:ro
     entrypoint:
+      - /app/cmd/prysmctl/prysmctl
       - validator
-      - --verbosity
-      - ${LOG_LEVEL}
-      - --datadir
-      - /var/lib/prysm
-      - accounts
-      - voluntary-exit
+      - exit
       - --wallet-dir=/var/lib/prysm/
       - --beacon-rpc-provider=consensus:4000
       - --wallet-password-file=/var/lib/prysm/password.txt
