Remove Docker Compose syntax version

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@ alertmanager/config.yml
 prometheus/custom-prom.yml
 blox-ssv-config.yaml
 blox-ssv-config.yaml.bak
+
+# Ignore macOS system files
+.DS_Store
