Remove references to irrelevant things

--- a/default.env
+++ b/default.env
@@ -1,7 +1,6 @@
-# The settings for eth-docker are in .env, use "nano .env". Don't edit default.env itself.
-# Client choice: See https://eth-docker.net/Usage/Advanced for available options
+# The settings for pulse-docker are in .env, use "nano .env". Don't edit default.env itself.
 COMPOSE_FILE=teku.yml:besu.yml:deposit-cli.yml
-# Set the ETH address that priority fees and MEV rewards should be sent to
+# Set the PLS address that priority fees should be sent to
 FEE_RECIPIENT=0x12d560D1d196eE4D62Ce827c9EEc2eD3ECc5827f
 # Decide whether to connect the CL to Flashbots MEV boost, and configure the VC to register with it.
 # Set MEV_BOOST to "true" for MEV boost, or any other value including empty for not using MEV boost.
@@ -17,8 +16,8 @@ GRAFFITI=Pulse Docker
 DEFAULT_GRAFFITI=false
 # Merged network to use. If using main net, set to mainnet.
 NETWORK=goerli
-# CL rapid sync via initial state/checkpoint. Please use one from https://eth-clients.github.io/checkpoint-sync-endpoints/
-# Alternatively, use an already synced CL that you trust. No trailing / for Teku, please.
+# CL rapid sync via initial state/checkpoint.
+# Alternatively, use an already synced CL that you trust.
 RAPID_SYNC_URL=
 # Doppelganger protection - set to "true" to enable. This will intentionally skip two epochs on client start, and attempt to
 # detect duplicates of the validator(s) already running. Note this is NOT foolproof, though it can be useful when moving a node
@@ -45,7 +44,6 @@ DDNS_SUBDOMAIN=
 DDNS_PROXY=true
 
 # Some clients suggest adjusting to higher (or lower) peer count. Adjust here, per client
-# Nimbus peer count should not be set below 70. CL_MIN_PEER_COUNT is used for Teku only.
 CL_MAX_PEER_COUNT=
 CL_MIN_PEER_COUNT=
 # Maximum active peers for EL.
